syntax = "proto3";

package payment;

// Service definition
service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

// Request message
message PaymentRequest {
  int32 orderId = 1;
  double amount = 2;
}

// Response message
message PaymentResponse {
  string status = 1;
  string transactionId = 2;
}
